[tool.poetry]
name = "sel4"
version = "0.1.0"
description = "Selenium Testing automation Framework"
authors = ["Dani Vainstein <solmarkn@gmail.com>"]
readme = "README.md"
repository = "https://github.com/daniv/sel4.git"
include = ["sel4/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^11.0.0"
selenium = "^4.1.0"
pydantic = "^1.9.0"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
